--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="about-block">
 
             <div class="about-image">
-                <img src="img/treinador.webp" alt="Treinador da 100 Limites">
+                <img src="./img/treinador.webp" alt="Treinador da 100 Limites">
             </div>
 
             <div class="about-content">
