improving and adding more contents for 100limites

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
         <h2>Metodologia de Trabalho</h2>
 
-        <p class="section-text">
+        <p class="section-text events-text">
             Nossa metodologia é baseada em acompanhamento individual,
             tecnologia e evolução contínua, sempre respeitando o objetivo
             e o momento de cada aluno.
@@ -237,43 +237,182 @@
         </div>
     </div>
 </section>  
-<!-- EVENTOS -->
+
+<section class="section" id="parceiros">
+    <div class="container center">
+        <h2>Nossos Parceiros</h2>
+        <p class="partner-text">
+            Marcas e profissionais que caminham junto com a 100 Limites.
+        </p>
+    </div>
+
+        <div class="partners-wrapper">
+            <div class="partners-track">
+
+                <div class="partner-item">
+                    <img src="./img/partners/nutrione_transparent.png" alt="Nutrione">
+                    <span>Nutrione</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/trisports.png" alt="Tri Sports">
+                    <span>Tri Sports</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/farmavita.png" alt="Farmavita">
+                    <span>Farmavita</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/gardenal.png" alt="Gardenal Fisioterapia">
+                    <span>Gardenal Fisioterapia</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/luan-fisioterapia.png" alt="Luan Amancio">
+                    <span>Luan Amancio</span>
+                </div>
+
+                <!-- DUPLICAÇÃO PARA LOOP -->
+                <div class="partner-item">
+                    <img src="./img/partners/nutrione_transparent.png" alt="Nutrione">
+                    <span>Nutrione</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/trisports.png" alt="Tri Sports">
+                    <span>Tri Sports</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/farmavita.png" alt="Farmavita">
+                    <span>Farmavita</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/gardenal.png" alt="Gardenal Fisioterapia">
+                    <span>Gardenal Fisioterapia</span>
+                </div>
+
+                <div class="partner-item">
+                    <img src="./img/partners/luan-fisioterapia.png" alt="Luan Amancio">
+                    <span>Luan Amancio</span>
+                </div>
+
+            </div>
+        </div>
+
+</section>
+
+<section class="section light" id="app">
+    <div class="container app-grid">
+
+        <!-- TEXTO -->
+        <div class="app-content">
+            <h2>Treinos pelo Aplicativo</h2>
+
+            <p>
+                Todos os alunos da <strong>100 Limites</strong> recebem seus
+                treinos semanais através de aplicativo, com acompanhamento
+                prático, organizado e integrado aos principais relógios e
+                plataformas de corrida.
+            </p>
+
+            <ul class="app-features">
+                <li>📊 Planilha de treinos atualizada semanalmente</li>
+                <li>⌚ Integração com relógios GPS</li>
+                <li>🔄 Sincronização com Strava</li>
+                <li>💬 Feedback dos treinos em tempo real</li>
+            </ul>
+
+            <div class="app-buttons">
+                <a href="#" class="app-btn">
+                    <img src="./img/play-store.png" alt="Google Play">
+                </a>
+
+                <a href="#" class="app-btn">
+                    <img src="./img/app-store.png" alt="App Store">
+                </a>
+            </div>
+        </div>
+
+        <!-- IMAGEM -->
+        <div class="app-image">
+            <img src="./img/app-planilha.webp" alt="Aplicativo de treinos de corrida">
+        </div>
+
+    </div>
+</section>
+
+
 <section class="section" id="eventos">
     <div class="container">
         <h2>Eventos</h2>
 
-        <p class="section-text">
+        <p class="section-text events-text">
             Participamos e organizamos corridas, treinos coletivos
             e eventos que fortalecem nossa comunidade.
         </p>
 
-        <div class="grid-3">
-            <div class="card">
-                <h3>Corridas Oficiais</h3>
-                <p>
-                    Participação em provas regionais e nacionais,
-                    com apoio e preparação completa.
-                </p>
+        <div class="events-grid">
+
+            <!-- EVENTO -->
+            <div class="event-card">
+                <div class="event-image">
+                    <img src="./img/events/evento1.jpg" alt="Corrida 100 Limites">
+                </div>
+
+                <div class="event-content">
+                    <span class="event-date">📅 12 de Maio de 2026</span>
+
+                    <h3>Corrida 100 Limites</h3>
+
+                    <p class="event-km">
+                        🏃 5 km • 10 km • 21 km
+                    </p>
+                </div>
             </div>
 
-            <div class="card">
-                <h3>Treinos Coletivos</h3>
-                <p>
-                    Treinos em grupo para motivação, troca de experiências
-                    e evolução conjunta.
-                </p>
+            <!-- EVENTO -->
+            <div class="event-card">
+                <div class="event-image">
+                    <img src="./img/events/evento2.png" alt="Treino Coletivo">
+                </div>
+
+                <div class="event-content">
+                    <span class="event-date">📅 02 de Junho de 2026</span>
+
+                    <h3>Treino Coletivo Aberto</h3>
+
+                    <p class="event-km">
+                        🏃 3 km • 5 km
+                    </p>
+                </div>
             </div>
 
-            <div class="card">
-                <h3>Eventos Internos</h3>
-                <p>
-                    Ações exclusivas para alunos, desafios e encontros
-                    para fortalecer o espírito de equipe.
-                </p>
+            <div class="event-card">
+                <div class="event-image">
+                    <img src="./img/events/evento 3.png" alt="Treino Coletivo">
+                </div>
+
+                <div class="event-content">
+                    <span class="event-date">📅 02 de Junho de 2026</span>
+
+                    <h3>Treino Coletivo Aberto</h3>
+
+                    <p class="event-km">
+                        🏃 3 km • 5 km
+                    </p>
+                </div>
             </div>
+
+            <!-- novos eventos entram aqui sem quebrar layout -->
+
         </div>
     </div>
 </section>
+
 <section class="section light" id="contato">
     <div class="container">
         <h2>Entre em Contato</h2>
