improving and adding more contents for 100limites

--- a/index.html
+++ b/index.html
@@ -345,8 +345,30 @@
     </div>
 </section>
 
+<section class="section" id="inspiracao">
+    <div class="container center">
+        <h2 class="inspiration-title">
+            Nada é mais forte do que uma pessoa determinada
+        </h2>
 
-<section class="section" id="eventos">
+        <a href="https://wa.me/5519999999999"
+           target="_blank"
+           class="btn-primary inspiration-btn">
+            Faça parte
+        </a>
+    </div>
+
+    <div class="inspiration-gallery">
+        <img src="./img/insp1.jpg" alt="Evento de corrida 100 Limites">
+        <img src="./img/insp2.jpg" alt="Treino coletivo 100 Limites">
+        <img src="./img/insp3.jpg" alt="Prova de rua">
+        <img src="./img/insp4.jpg" alt="Comunidade 100 Limites">
+    </div>
+</section>
+
+
+
+<section class="section light" id="eventos">
     <div class="container">
         <h2>Eventos</h2>
 
@@ -413,7 +435,7 @@
     </div>
 </section>
 
-<section class="section light" id="contato">
+<section class="section" id="contato">
     <div class="container">
         <h2>Entre em Contato</h2>
 
@@ -456,7 +478,7 @@
    aria-label="Falar no WhatsApp">
     <img src="./img/WhatsApp.svg.png" alt="WhatsApp">
 </a>
-<div class="footer-bottom section">
+<div class="footer-bottom section light">
     <p>
         © 2026 • 100 Limites Assessoria Esportiva • Todos os direitos reservados
     </p>
